computed and watcher

--- a/03-computed-properties-and-watchers/template/computed.html
+++ b/03-computed-properties-and-watchers/template/computed.html
@@ -8,6 +8,8 @@
             <p>fullname: "{{ fullName }}"</p>
             <p>firstname: "{{ firstName }}"</p>
             <p>lastname: "{{ lastName }}"</p>
+            <p>input first name: <input v-model="firstName"></p>
+            <p>input last name: <input v-model="lastName"></p>
         </div>
 
         <script src="https://unpkg.com/vue/dist/vue.js"></script>
