--- a/03-computed-properties-and-watchers/template/watcher.html
+++ b/03-computed-properties-and-watchers/template/watcher.html
@@ -19,7 +19,7 @@
       el: '#watch-example',
       data: {
         question: '',
-        answer: 'I cannot give you an answer until you ask a qujestion!',
+        answer: 'I cannot give you an answer until you ask a question!',
         imgUrl: "",
       },
       watch: {
