--- a/05-conditional-rendering/template/conditional.html
+++ b/05-conditional-rendering/template/conditional.html
@@ -1,43 +1,49 @@
 <html>
+    <head>
+    <style>
 
-<head>
-  <style>
-    .plum {
-      background-color: plum;
+    .angry {
+        color: red
     }
-    .yellowgreen {
-      background-color: yellowgreen;
-    }
-    .paleturquoise {
-      background-color: paleturquoise;
-    }
-  </style>
-</head>
 
-<body>
-  <div id="conditional-example">
-    <div class="paleturquoise" style="max-width: 600px; min-height: 600px; margin: 30px auto; padding: 30px;">
-      <div class="yellowgreen" style="max-width: 180px; min-height: 200px; margin: 30px auto; display: flex; text-align:center;">
-        <p>{{ target }}</p>
-      </div>
+    .happy {
+        color: violet
+    }
+
+    </style>
+    </head>
+    <body>
+
+    <div id="app">
+        <div v-bind:class="{angry: isAngry, happy: !isAngry }" :style="styleObject">
+            <h1 v-if="!isAngry">ch2c is happy~</h1>
+            <h1 v-else>ch2c is angry!!</h1>
+            <button @click="toggleAnger">{{ isAngry ? "please" : "annoy" }} her</button>
+        </div>
     </div>
-  </div>
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script>
-    new Vue({
-      el: "#conditional-example",
-      data: function () {
-        return {
-          cards: ["A", "B", "C"],
-          target: "",
-          attempt: "",
-        }
-      },
-      created: function () {
-        this.target = this.cards[Math.floor(Math.random() * this.cards.length)]
-      }
-    })
-  </script>
-</body>
 
+        <script src="https://unpkg.com/vue/dist/vue.js"></script>
+        <script>
+        
+        new Vue({
+            el: "#app",
+            data: function () {
+                return {
+                    position: 'center',
+                    isAngry: true,
+                    styleObject: {
+                        "text-align": this.position,
+                        "margin": "300px",
+                    }
+                }
+            },
+            methods: {
+                toggleAnger () {
+                    this.isAngry = !this.isAngry;
+                }
+            }
+        })
+        
+        </script>
+    </body>
 </html>
