--- a/01-vue-instance/template/instance.html
+++ b/01-vue-instance/template/instance.html
@@ -1,4 +1,23 @@
 <html>
     <head></head>
-    <body></body>
+    
+    <body>
+        <div id="app"></div>
+
+        <script src="https://unpkg.com/vue/dist/vue.js"></script> 
+        <script>
+            var myData = { a: 2 }
+
+            new Vue({
+                template: `
+                <div>
+                    <h1>hello</h1>
+                    <ul><li>apple</li><li>banana</li></ul>
+                    </div>
+                `,
+                el: "#app",
+                data: myData
+            })
+        </script>
+    </body>
 </html>
